simple past conjugation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Conjugator</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="conjugate.js" charset="utf-8"></script>
@@ -8,6 +9,7 @@
     </head>
     <body>
         <div id="main">
+            <div id="question"><span id="question-word">たべる</span></div>
             <textarea id="answer" data-kana-input></textarea>
         </div>
     </body>
