removed old rules and added working prototype

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     </head>
     <body>
         <div id="main">
-            <div id="question"><span id="question-word">たべる</span></div>
+            <div id="info">
+                <div id="question"><span id="question-word"><ruby>食<rt>た</rt></ruby>べる</span></div>
+                <div id="mods">
+                    <div class="mod">Conditional ~ば</div>
+                    <div class="mod">Negative</div>
+                    <div id="mod-clear" style="clear:both"></div>
+                </div>
+                <div id="def"><span id="part">v. </span><span id="meaning">to eat</span></div>
+            </div>
             <textarea id="answer" data-kana-input></textarea>
         </div>
     </body>
