--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="rules.js" charset="utf-8"></script>
         <script src="conjugate.js" charset="utf-8"></script>
         <script src="kana-input.js" charset="utf-8"></script>
     </head>
     <body>
+        <div id="start-screen">
+            日本語 Conjugation Game
+            <div id="play" class="btn">Play</div>
+            <div id="options" class="btn">Options</div>
+            <div id="how-to" class="btn">How to play</div>
+        </div>
         <div id="main">
             <div id="info">
                 <div id="question"><span id="question-word"><ruby>食<rt>た</rt></ruby>べる</span></div>
@@ -18,7 +25,7 @@
                 </div>
                 <div id="def"><span id="part">v. </span><span id="meaning">to eat</span></div>
             </div>
-            <textarea id="answer" data-kana-input></textarea>
+            <textarea id="answer" maxlength="25" data-kana-input></textarea>
         </div>
     </body>
 </html>
