--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
         <script src="kana-input.js" charset="utf-8"></script>
     </head>
     <body>
+        <div id="title"><div id="title-text">日本語 Conjugation Game</div></div>
         <div id="start-screen">
-            日本語 Conjugation Game
-            <div id="play" class="btn">Play</div>
+            <div id="play" class="btn">Start</div>
             <div id="options" class="btn">Options</div>
-            <div id="how-to" class="btn">How to play</div>
         </div>
         <div id="main">
             <div id="info">
-                <div id="question"><span id="question-word"><ruby>食<rt>た</rt></ruby>べる</span></div>
+                <div id="question"><span id="question-word"></span></div>
                 <div id="mods">
-                    <div class="mod">Conditional ~ば</div>
-                    <div class="mod">Negative</div>
                     <div id="mod-clear" style="clear:both"></div>
                 </div>
                 <div id="def"><span id="part">v. </span><span id="meaning">to eat</span></div>
