--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                 <div id="mods">
                     <div id="mod-clear" style="clear:both"></div>
                 </div>
-                <div id="def"><span id="part">v. </span><span id="meaning">to eat</span></div>
+                <div id="def"><span id="part" class="lb-text"></span><span id="meaning"></span></div>
+                <div id="scoreboard"><span id="score">0</span><br/><span class="lb-text">x</span><span id="mult">1</span></div>
             </div>
-            <textarea id="answer" maxlength="25" data-kana-input></textarea>
+            <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
     </body>
 </html>
