--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
             </div>
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
+        <div id="option-menu">
+            Yo options boii
+        </div>
     </body>
 </html>
