--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <script src="https://cdn.rawgit.com/nnattawat/flip/v1.0.16/dist/jquery.flip.min.js"></script>
         <script src="rules.js" charset="utf-8"></script>
         <script src="conjugate.js" charset="utf-8"></script>
         <script src="kana-input.js" charset="utf-8"></script>
@@ -27,7 +28,14 @@
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
         <div id="option-menu">
-            Yo options boii
+            <div class="card"> 
+                <div class="front"> 
+                    Front content
+                </div> 
+                <div class="back">
+                    Back content
+                </div> 
+            </div>
         </div>
     </body>
 </html>
