--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
         <div id="option-menu">
-            <div class="card"> 
-                <div class="front"> 
-                    Front content
-                </div> 
-                <div class="back">
-                    Back content
-                </div> 
+            <div class="card-outer">
+                <div class="card"> 
+                    <div class="front"> 
+                        Front content
+                    </div> 
+                    <div class="back">
+                        Back content
+                    </div> 
+                </div>
             </div>
         </div>
     </body>
