Add basic checkbox style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
         <div id="option-menu">
-            Once again lmao
+            <div class="check-box">
+                <input type="checkbox" value="1" id="i3" name="" />
+                <label for="i3"></label>
+            </div>
         </div>
     </body>
 </html>
