--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
         <div id="option-menu">
+            <div class="option-label">Godan verbs</div>
             <div class="check-box">
-                <input type="checkbox" value="1" id="i3" name="" />
-                <label for="i3"></label>
+                <input type="checkbox" value="1" id="godan" name="" />
+                <label for="godan"></label>
             </div>
         </div>
     </body>
