Add second column

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 <input type="checkbox" value="1" id="godan" name="" />
                 <label for="godan"></label>
             </div>
+            <div class="option-label">Ichidan verbs</div>
+            <div class="check-box">
+                <input type="checkbox" value="1" id="godan" name="" />
+                <label for="godan"></label>
+            </div>
         </div>
     </body>
 </html>
