--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
             <div class="option-label">Ichidan verbs</div>
             <div class="check-box">
-                <input type="checkbox" value="1" id="godan" name="" />
-                <label for="godan"></label>
+                <input type="checkbox" value="2" id="ichidan" name="" />
+                <label for="ichidan"></label>
             </div>
         </div>
     </body>
