Add second row of options

--- a/index.html
+++ b/index.html
@@ -27,15 +27,25 @@
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
         </div>
         <div id="option-menu">
-            <div class="option-label">Godan verbs</div>
+            <div class="option-label">う verbs</div>
             <div class="check-box">
-                <input type="checkbox" value="1" id="godan" name="" />
-                <label for="godan"></label>
+                <input type="checkbox" value="0" id="uverb" name="" />
+                <label for="uverb"></label>
             </div>
-            <div class="option-label">Ichidan verbs</div>
+            <div class="option-label">る verbs</div>
             <div class="check-box">
-                <input type="checkbox" value="2" id="ichidan" name="" />
-                <label for="ichidan"></label>
+                <input type="checkbox" value="1" id="ruverb" name="" />
+                <label for="ruverb"></label>
+            </div>
+            <div class="option-label">い adjectives</div>
+            <div class="check-box">
+                <input type="checkbox" value="0" id="iadj" name="" />
+                <label for="iadj"></label>
+            </div>
+            <div class="option-label">な adjectives</div>
+            <div class="check-box">
+                <input type="checkbox" value="0" id="naadj" name="" />
+                <label for="naadj"></label>
             </div>
         </div>
     </body>
