--- a/index.html
+++ b/index.html
@@ -47,28 +47,16 @@
                 <input type="checkbox" value="0" id="naadj" name="" />
                 <label for="naadj"></label>
             </div>
-            <div style="clear: both"></div><br/>
-            Level 1
-            <br/>
-            <div class="option-label">う verbs</div>
+            <div style="clear: both"><br/>Level 1</div>
+            <div class="option-label">Negative</div>
             <div class="check-box">
                 <input type="checkbox" value="0" id="uverb" name="" />
                 <label for="uverb"></label>
             </div>
-            <div class="option-label">る verbs</div>
+            <div class="option-label">Past Tense</div>
             <div class="check-box">
                 <input type="checkbox" value="1" id="ruverb" name="" />
                 <label for="ruverb"></label>
-            </div>
-            <div class="option-label">い adjectives</div>
-            <div class="check-box">
-                <input type="checkbox" value="0" id="iadj" name="" />
-                <label for="iadj"></label>
-            </div>
-            <div class="option-label">な adjectives</div>
-            <div class="check-box">
-                <input type="checkbox" value="0" id="naadj" name="" />
-                <label for="naadj"></label>
             </div>
         </div>
     </body>
