--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 <input type="checkbox" value="0" id="naadj" name="" />
                 <label for="naadj"></label>
             </div>
-            <div style="clear: both"><br/>Level 1</div>
+            <div class="menu-sec"><br/>Level 1</div>
             <div class="option-label">Negative</div>
             <div class="check-box">
-                <input type="checkbox" value="0" id="uverb" name="" />
-                <label for="uverb"></label>
+                <input type="checkbox" value="0" id="neg" name="" />
+                <label for="neg"></label>
             </div>
             <div class="option-label">Past Tense</div>
             <div class="check-box">
-                <input type="checkbox" value="1" id="ruverb" name="" />
-                <label for="ruverb"></label>
+                <input type="checkbox" value="1" id="past" name="" />
+                <label for="past"></label>
             </div>
         </div>
     </body>
