Add second level

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                 <input type="checkbox" value="1" id="past" name="" />
                 <label for="past"></label>
             </div>
+            <div class="menu-sec"><br/>Level 2</div>
+            <div class="option-label">Negative</div>
+            <div class="check-box">
+                <input type="checkbox" value="0" id="neg" name="" />
+                <label for="neg"></label>
+            </div>
+            <div class="option-label">Past Tense</div>
+            <div class="check-box">
+                <input type="checkbox" value="1" id="past" name="" />
+                <label for="past"></label>
+            </div>
         </div>
     </body>
 </html>
