--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <input type="checkbox" value="0" id="naadj" name="" />
                 <label for="naadj"></label>
             </div>
-            <div class="menu-sec"><br/>Level 1</div>
+            <div class="menu-sec"><br/>Basic</div>
             <div class="option-label">Negative</div>
             <div class="check-box">
                 <input type="checkbox" value="0" id="neg" name="" />
@@ -58,16 +58,16 @@
                 <input type="checkbox" value="1" id="past" name="" />
                 <label for="past"></label>
             </div>
-            <div class="menu-sec"><br/>Level 2</div>
-            <div class="option-label">Negative</div>
+            <div class="menu-sec"><br/>Intermediate</div>
+            <div class="option-label">Potential Form</div>
             <div class="check-box">
-                <input type="checkbox" value="0" id="neg" name="" />
-                <label for="neg"></label>
+                <input type="checkbox" value="0" id="poten" name="" />
+                <label for="poten"></label>
             </div>
-            <div class="option-label">Past Tense</div>
+            <div class="option-label">Te Form</div>
             <div class="check-box">
-                <input type="checkbox" value="1" id="past" name="" />
-                <label for="past"></label>
+                <input type="checkbox" value="1" id="te" name="" />
+                <label for="te"></label>
             </div>
         </div>
     </body>
