--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <input type="checkbox" value="1" id="te" name="" />
                 <label for="te"></label>
             </div>
+            <div class="menu-sec"><br/>Advanced</div>
         </div>
     </body>
 </html>
