Moved to js options

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <input type="checkbox" value="0" id="naadj" name="" />
                 <label for="naadj"></label>
             </div>
-            <div class="menu-sec"><br/>Basic</div>
+            <div class="menu-sec" id="basic-opt"><br/>Basic</div>
             <div class="menu-sec"><br/>Intermediate</div>
             <div class="menu-sec"><br/>Advanced</div>
         </div>
