adds past items to a bottom well

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div id="scoreboard"><span id="score">0</span><br/><span class="lb-text">x</span><span id="mult">1</span></div>
             </div>
             <div id="time-bar"><textarea id="answer" maxlength="25" data-kana-input></textarea></div>
+            <div id="well"></div>
         </div>
         <div id="option-menu">
             <div class="option-label">う verbs</div>
