--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <script src="furigana.js" charset="utf-8"></script>
         <script src="rules.js" charset="utf-8"></script>
         <script src="conjugate.js" charset="utf-8"></script>
         <script src="kana-input.js" charset="utf-8"></script>
