Added Godan conjugations and a lot more verbs. Even distribution of word sets. Added meaning and modifiers to well items.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script src="furigana.js" charset="utf-8"></script>
         <script src="rules.js" charset="utf-8"></script>
+        <script src="vocab.js" charset="utf-8"></script>
         <script src="conjugate.js" charset="utf-8"></script>
         <script src="kana-input.js" charset="utf-8"></script>
     </head>
