corrected bad vocab. Added consessionary 'du' as a duplicate 'zu', for words that used it.

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
             <div id="well"></div>
         </div>
         <div id="option-menu">
-            <div class="option-label">う verbs</div>
+            <div class="option-label">ichidan verbs</div>
             <div class="check-box">
-                <input type="checkbox" value="0" id="uverb" name="" />
-                <label for="uverb"></label>
+                <input type="checkbox" checked="checked" id="opt-ichidan" name="" />
+                <label for="opt-ichidan"></label>
             </div>
-            <div class="option-label">る verbs</div>
+            <div class="option-label">godan verbs</div>
             <div class="check-box">
-                <input type="checkbox" value="1" id="ruverb" name="" />
-                <label for="ruverb"></label>
+                <input type="checkbox" checked="checked" id="opt-godan" name="" />
+                <label for="opt-godan"></label>
             </div>
-            <div class="option-label">い adjectives</div>
+            <div class="option-label striken">い adjectives</div>
             <div class="check-box">
                 <input type="checkbox" value="0" id="iadj" name="" />
                 <label for="iadj"></label>
@@ -50,9 +50,13 @@
                 <input type="checkbox" value="0" id="naadj" name="" />
                 <label for="naadj"></label>
             </div>
+            <!--
             <div class="menu-sec" id="basic-opt"><br/>Basic</div>
             <div class="menu-sec"><br/>Intermediate</div>
             <div class="menu-sec"><br/>Advanced</div>
+            -->
+            <div class="menu-sec"></div>
+            <div id="optplay" class="btn">Start</div>
         </div>
     </body>
 </html>
