--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
                 <input type="checkbox" checked="checked" id="opt-godan" name="" />
                 <label for="opt-godan"></label>
             </div>
+            <div class="option-label">irregular verbs</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-irregular" name="" />
+                <label for="opt-irregular"></label>
+            </div>
             <div class="option-label striken">い adjectives</div>
             <div class="check-box">
                 <input type="checkbox" value="0" id="iadj" name="" />
                 <label for="iadj"></label>
             </div>
-            <div class="option-label">な adjectives</div>
+            <div class="option-label　striken">な adjectives</div>
             <div class="check-box">
                 <input type="checkbox" value="0" id="naadj" name="" />
                 <label for="naadj"></label>
