--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
                 <input type="checkbox" checked="checked" id="opt-irregular" name="" />
                 <label for="opt-irregular"></label>
             </div>
-            <div class="option-label striken">い adjectives</div>
+
+            <div class="menu-sec"></div>
+
+            <div class="option-label">い adjectives</div>
             <div class="check-box">
-                <input type="checkbox" value="0" id="iadj" name="" />
-                <label for="iadj"></label>
+                <input type="checkbox" checked="checked" id="opt-iadj" name="" />
+                <label for="opt-iadj"></label>
             </div>
-            <div class="option-label　striken">な adjectives</div>
+            <div class="option-label">な adjectives</div>
             <div class="check-box">
-                <input type="checkbox" value="0" id="naadj" name="" />
-                <label for="naadj"></label>
+                <input type="checkbox" checked="checked" id="opt-naadj" name="" />
+                <label for="opt-naadj"></label>
             </div>
             <!--
             <div class="menu-sec" id="basic-opt"><br/>Basic</div>
