added fork-me ribbon and intro text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <div id="start-screen">
             <div id="play" class="btn">Start</div>
             <div id="options" class="btn">Options</div>
+            <div id="explan">
+              <p>
+                This game <em>may</em> contain inaccuracies and is not intended to be used for any purpose
+                other than for entertainment. It may also contain conjugations that are not actively used
+                in the Japanese language. Allow the purpose of this exercise to be to correctly conjugate
+                the <em>type</em> rather than the word itself.
+              </p>
+            </div>
         </div>
         <div id="main">
             <div id="info">
@@ -66,5 +74,9 @@
             <div class="menu-sec"></div>
             <div id="optplay" class="btn">Start</div>
         </div>
+
+        <a id="ribbon" href="https://github.com/juanchel/conjugator">
+          <img src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png">
+        </a>
     </body>
 </html>
