Fixes #3, options stick via location hash

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             <div id="well"></div>
         </div>
         <div id="option-menu">
-            <div class="option-label">ichidan verbs</div>
+            <h2>Verbs</h2>
+            <div class="option-label">ichidan verbs (-いる、-える)</div>
             <div class="check-box">
                 <input type="checkbox" checked="checked" id="opt-ichidan" name="" />
                 <label for="opt-ichidan"></label>
             </div>
             <div class="option-label">godan verbs</div>
             <div class="check-box">
-                <input type="checkbox" checked="checked" id="opt-godan" name="" />
+                <input type="checkbox" checked="checked" id="opt-godan" name=""/>
                 <label for="opt-godan"></label>
             </div>
             <div class="option-label">irregular verbs</div>
@@ -55,7 +56,65 @@
             </div>
 
             <div class="menu-sec"></div>
+            <h2>Verb Conjugations</h2>
+            <div class="option-label">Formal</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-formal" name="" />
+                <label for="opt-formal"></label>
+            </div>
+            <div class="option-label">Informal</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-informal" name="" />
+                <label for="opt-informal"></label>
+            </div>
 
+            <div class="option-label">Past</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-past" name="" />
+                <label for="opt-past"></label>
+            </div>
+            <div class="option-label">Negative</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-negative" name="" />
+                <label for="opt-negative"></label>
+            </div>
+
+            <div class="option-label">て form</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-te" name="" />
+                <label for="opt-te"></label>
+            </div>
+            <div class="option-label">Volitional</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-volitional" name="" />
+                <label for="opt-volitional"></label>
+            </div>
+            <div class="option-label">Potential</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-potential" name="" />
+                <label for="opt-potential"></label>
+            </div>
+            <div class="option-label">Conditional</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-conditional" name="" />
+                <label for="opt-conditional"></label>
+            </div>
+
+
+            <div class="option-label">Causative</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-causative" name="" />
+                <label for="opt-causative"></label>
+            </div>
+            <div class="option-label">Passive</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-passive" name="" />
+                <label for="opt-passive"></label>
+            </div>
+
+
+            <div class="menu-sec"></div>
+            <h2>Adjectives</h2>
             <div class="option-label">い adjectives</div>
             <div class="check-box">
                 <input type="checkbox" checked="checked" id="opt-iadj" name="" />
