added option for kanji. new options to not yet work

--- a/index.html
+++ b/index.html
@@ -125,11 +125,15 @@
                 <input type="checkbox" checked="checked" id="opt-naadj" name="" />
                 <label for="opt-naadj"></label>
             </div>
-            <!--
-            <div class="menu-sec" id="basic-opt"><br/>Basic</div>
-            <div class="menu-sec"><br/>Intermediate</div>
-            <div class="menu-sec"><br/>Advanced</div>
-            -->
+
+            <div class="menu-sec"></div>
+            <h2>Kanji</h2>
+            <div class="option-label">Show and Accept Kanji</div>
+            <div class="check-box">
+                <input type="checkbox" checked="checked" id="opt-kanji" name="" />
+                <label for="opt-kanji"></label>
+            </div>
+
             <div class="menu-sec"></div>
             <div id="optplay" class="btn">Start</div>
         </div>
